# nazcaBPM

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Readme.md  plot_sim.py  todo.md
Python/: generateInput.py  generate_dc_from_nazca.py  generate_mmi_from_nazca.py  generate_taper_from_nazca.py  get_polygons_gds.py  mode_plot.py  plot_sim.py  requirements.txt  xs_information.py
doc/: bibliography.bib  choice-of-dataformat.md  derivation_bpm.tex  getting-started.md
inputs/: example_inputs.json  example_mmi.json  example_taper.json  inputs.json
src/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.h  BpmSolver.cpp  BpmSolver.h  Engine.cpp  Engine.h  FieldMonitor.cpp  FieldMonitor.h  Geometry.cpp  Geometry.h  GridInterpolator.cpp  GridInterpolator.h  IndexMonitor.cpp  IndexMonitor.h  Layer.cpp  Layer.h  ModeHandler.cpp  ModeHandler.h  ModeSolver.cpp  ModeSolver.h  OperatorSuite.cpp  OperatorSuite.h  PML.cpp  PML.h  Parameters.h  Polygon.cpp  Polygon.h  Port.cpp  Port.h  ProgressBar.cpp  ProgressBar.h  RectangularGrid.cpp  RectangularGrid.h  RectangularGrid3D.cpp  RectangularGrid3D.h  Shape.cpp  Shape.h  Solver.cpp  Solver.h  TriDiag.cpp  (+5 more)
src/IO/: Readers.cpp  Readers.h  Writers.cpp  Writers.h  hdf_writer.h
test/: CMakeLists.txt  geometry_test.gds  test.cpp
